--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ td { vertical-align: top; }
 
 
 html { height: 100% }
-body { height: 100%; margin: 0; padding: 0 }
+body { height: 100%; margin: 0; padding: 0 ;font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif;}
 
 #mapDiv { height: 100% }
 
@@ -240,19 +240,16 @@ body { height: 100%; margin: 0; padding: 0 }
 	position: absolute;
 	top: 20px;
 	right: 10px;
-}
-
-#inputDiv {
-	position: absolute;
-	top: 130px;
-	right: 10px;
+	width: 220px;
 }
 
 #resultDiv {
 	position: absolute;
-	top: 260px;
+	top: 180px;
 	right: 10px;
-	visibility: hidden;
+	width: 220px;
+/* 	visibility: hidden; */
+/* 	display: none; */
 }
 
 .inputHeader {
@@ -266,7 +263,7 @@ body { height: 100%; margin: 0; padding: 0 }
 .underlabel {
 	display:block;
 	font-size: 0.75em;
-	width: 70px;
+	width: 90px;
 	float: left;
 	padding-left: 3px;
 	padding-right: 6px;
@@ -276,7 +273,6 @@ body { height: 100%; margin: 0; padding: 0 }
 	
 	clear: right;
 	
-/* 	background-color:#fdfdfd; */
 	border-style:solid;
 	border-width:thin;
 	border-color:#485C5A;
@@ -284,25 +280,56 @@ body { height: 100%; margin: 0; padding: 0 }
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
-	-moz-box-shadow: 1px 1px 0px #fff;
-	-moz-box-shadow:inset 1px 1px 1px #8c8590;
 	padding-left:3px;
 	padding-top: 3px;
 	padding-bottom:3px;
 	
-	width: 70px;
+	width: 90px;
 }
 
 .roundedBox input[type="button"] {
 	margin-top: 10px;
-	float: right;
+	width: initial;
+	display: block;
 }
 
+div .result {
+	clear: right;
+	margin-top: 1em;	
+	overflow: auto;
+	width:98%;
+	height: auto;
+}
 
+.result img {
+	float: left;
+	margin-right: 1em;
+}
 
+.result span {
+	font-weight: bold;
+	font-style: oblique;
+	display: block;
+	clear: right;
+}
 
+.result p {
+	margin-top: 0em;
+	font-size: 0.8em;
+}
 
+.ui-accordion .ui-accordion-header a {
+	padding: 0em 0em 0em 2.2em;
+}
 
+.ui-accordion .ui-accordion-content-active {
+	height: auto;
+}
+
+.ui-accordion .ui-accordion-content {
+	padding: 0em;
+	
+}
 
 
 
